Migrated remaining modules to Spring Boot 4/ Java 25 and updated dependencies. Refactored Maven build to remove duplication and improve consistency. Renamed project coordinates for consistency across modules. NOTE: Auth Server has been migrated to Spring Boot 4 / Spring Security 7, however there are failing tests unrelated to the upgrade. Spring Security does not support use of JWT and Opaque tokens concurrently.